--- a/.env-api
+++ b/.env-api
@@ -1,4 +1,4 @@
-ISSUER_API_UI_SERVER_URL=http://localhost:3002
+ISSUER_API_UI_SERVER_URL=http://api.pid.purefi.io:3002
 ISSUER_API_UI_SERVER_PORT=3002
 ISSUER_API_UI_AUTH_USER=user-api
 ISSUER_API_UI_AUTH_PASSWORD=password-api
@@ -9,4 +9,3 @@ ISSUER_API_METHOD=polygonid
 ISSUER_API_BLOCKCHAIN=polygon
 ISSUER_API_NETWORK=mumbai
 ISSUER_API_ENVIRONMENT=local
-ISSUER_API_UI_ISSUER_DID=did:polygonid:polygon:mumbai:2qHLqgGsAu5GTJqDCu1zrtP64aiVM9MJJy6hSpzXuN
