--- a/.env-issuer
+++ b/.env-issuer
@@ -1,17 +1,17 @@
-ISSUER_SERVER_URL=http://localhost:3001
+ISSUER_SERVER_URL=http://api.pid.purefi.io:3001
 ISSUER_SERVER_PORT=3001
 ISSUER_NATIVE_PROOF_GENERATION_ENABLED=true
 ISSUER_PUBLISH_KEY_PATH=pbkey
 ISSUER_ONCHAIN_PUBLISH_STATE_FREQUENCY=1m
 ISSUER_ONCHAIN_CHECK_STATUS_FREQUENCY=1m
-ISSUER_DATABASE_URL=postgres://polygonid:polygonid@postgres:5432/platformid?sslmode=disable
+ISSUER_DATABASE_URL=postgres://polygonid:polygonid@api.pid.purefi.io:5432/platformid?sslmode=disable
 ISSUER_LOG_LEVEL=-4
 ISSUER_LOG_MODE=2
 ISSUER_API_AUTH_USER=user-issuer
 ISSUER_API_AUTH_PASSWORD=password-issuer
-ISSUER_KEY_STORE_ADDRESS=http://vault:8200
+ISSUER_KEY_STORE_ADDRESS=http://api.pid.purefi.io:8200
 ISSUER_KEY_STORE_PLUGIN_IDEN3_MOUNT_PATH=iden3
-ISSUER_REVERSE_HASH_SERVICE_URL=http://localhost:3001
+ISSUER_REVERSE_HASH_SERVICE_URL=http://api.pid.purefi.io:3001
 ISSUER_REVERSE_HASH_SERVICE_ENABLED=false
 ISSUER_ETHEREUM_URL=https://rpc.ankr.com/polygon_mumbai
 ISSUER_ETHEREUM_CONTRACT_ADDRESS=0x134B1BE34911E39A8397ec6289782989729807a4
@@ -25,9 +25,8 @@ ISSUER_ETHEREUM_RPC_RESPONSE_TIMEOUT=5s
 ISSUER_ETHEREUM_WAIT_RECEIPT_CYCLE_TIME=30s
 ISSUER_ETHEREUM_WAIT_BLOCK_CYCLE_TIME=30s
 ISSUER_ETHEREUM_RESOLVER_PREFIX=polygon:mumbai
-ISSUER_PROVER_SERVER_URL=http://localhost:8002
+ISSUER_PROVER_SERVER_URL=http://api.pid.purefi.io:8002
 ISSUER_PROVER_TIMEOUT=600s
 ISSUER_CIRCUIT_PATH=./pkg/credentials/circuits
 ISSUER_REDIS_URL=redis://@redis:6379/1
 ISSUER_SCHEMA_CACHE=false
-ISSUER_KEY_STORE_TOKEN=hvs.L0fUrTiwL7UbOrUqRrFZV2qN
